--- a/index.html
+++ b/index.html
@@ -8,37 +8,37 @@
     <meta name="theme-color" content="#12121A" />
     <meta property="fb:admins" content="100015089536438" />
 
-    <link rel="stylesheet" href="./styles/index.css">
-    <link rel="stylesheet" href="./styles/general.css">
+    <link rel="stylesheet" href="../styles/base.css">
+    <link rel="stylesheet" href="../styles/utils.css">
+    <link rel="stylesheet" href="../styles/index.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="header-logo">
+    <header class="header">
+        <div class="header__logo">
             <img src="./assets/svg/logo.svg" alt="Logo Briones brand">
         </div>    
         <nav>
-            <ul class="header-list">
+            <ul class="header__list">
                 <li><a href="./pages/aboutme.html">About me</a></li>
                 <li><a href="./pages/work.html">Work</a></li>
             </ul> 
         </nav>  
     </header>
-    <main class="main">
-        <div class="main-logo--container">
+    <main class="main center">
+        <div class="main__logo-container"> 
             <img src="./assets/svg/logo.svg" alt="Logo Briones brand">
         </div>  
         <p>frontend developer</p>  
         <p>ui designer</p>
         <div class="icons">
             <ul class="generic-list-horizontal">
-                <li><a href="https://api.whatsapp.com/send?phone=51972001932&text=Hola%20Alex%20😁,%20¿Cómo%20estás?"> <img src="./assets/svg/whatsapp.svg" alt="icon-whatsapp"></a></li>
-                <li><a href="https://twitter.com/alexbvart"> <img src="./assets/svg/twitter.svg" alt="icon-twiter"></a></li>
-                <li><a href="https://github.com/alexbvart"> <img src="./assets/svg/github.svg" alt="icon-github"></a></li>
-                <li><a href="https://www.messenger.com/t/100015089536438/?messaging_source=source%3Apages%3Amessage_shortlink"> <img src="./assets/svg/messenger.svg" alt="icon-messenger"></a></li> 
+                <li><a target="blank" href="https://api.whatsapp.com/send?phone=51972001932&text=Hola%20Alex%20😁,%20¿Cómo%20estás?"> <img src="./assets/svg/whatsapp.svg" alt="icon-whatsapp"></a></li>
+                <li><a target="blank" href="https://twitter.com/alexbvart"> <img src="./assets/svg/twitter.svg" alt="icon-twiter"></a></li>
+                <li><a target="blank" href="https://github.com/alexbvart"> <img src="./assets/svg/github.svg" alt="icon-github"></a></li>
+                <li><a target="blank" href="https://www.messenger.com/t/100015089536438/?messaging_source=source%3Apages%3Amessage_shortlink"> <img src="./assets/svg/messenger.svg" alt="icon-messenger"></a></li> 
                 <!-- m.me/alexbvart -->
-            
-                
             </ul>
         </div>
     </main>
