--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -25,7 +25,7 @@
             </a>
         </div>
         <nav>
-            <ul class=" header__list--left">
+            <ul class=" header__list header__list--left">
                 <li><a href="./work.html">Work</a></li>
                 <li><a href="#">About me</a></li>
             </ul>
