--- a/pages/work.html
+++ b/pages/work.html
@@ -23,7 +23,7 @@
             </a>
         </div>    
         <nav>
-            <ul class="header__list--left">
+            <ul class="header__list header__list--left">
                 <li><a href="./aboutme.html">About me</a></li>
                 <li><a href="#">Work</a></li>
             </ul> 
