prsentacion clud unt

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="theme-color" content="#12121A" />
     <meta property="fb:admins" content="100015089536438" />
 
-    <link rel="stylesheet" href="../styles/base.css">
-    <link rel="stylesheet" href="../styles/utils.css">
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="./styles/base.css">
+    <link rel="stylesheet" href="./styles/utils.css">
+    <link rel="stylesheet" href="./styles/index.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
