minificacion css styles

--- a/pages/work.html
+++ b/pages/work.html
@@ -7,13 +7,15 @@
     <title>My Works</title>
     <meta name="theme-color" content="#12121A" />
     <meta property="fb:admins" content="100015089536438" />
+    <link rel="shortcut icon" type="image/png" href="../assets/png/favicon.png">
 
-    <link rel="stylesheet" href="../styles/base.css">
-    <link rel="stylesheet" href="../styles/utils.css">
-    <link rel="stylesheet" href="../styles/index.css">
-    <link rel="stylesheet" href="../styles/work.css">
+    <link rel="stylesheet" href="../styles/base.min.css">
+    <link rel="stylesheet" href="../styles/utils.min.css">
+    <link rel="stylesheet" href="../styles/index.min.css">
+    <link rel="stylesheet" href="../styles/work.min.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+
 </head>
 <body >
     <header class="header">
@@ -137,6 +139,8 @@
         </div>
     </main>
     <div class="img-background"></div>
+
+
 
 </body>
 </html>
