--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>Portfolio</title>
     <meta name="theme-color" content="#12121A" />
     <meta property="fb:admins" content="100015089536438" />
+    <link rel="shortcut icon" type="image/png" href="./assets/png/favicon.png">
 
-    <link rel="stylesheet" href="./styles/base.css">
-    <link rel="stylesheet" href="./styles/utils.css">
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/base.min.css">
+    <link rel="stylesheet" href="./styles/utils.min.css">
+    <link rel="stylesheet" href="./styles/index.min.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header class="header">
@@ -42,5 +44,6 @@
             </ul>
         </div>
     </main>
+
 </body>
 </html>
