--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -7,13 +7,15 @@
     <title>Alexander Briones</title>
     <meta name="theme-color" content="#12121A" />
     <meta property="fb:admins" content="100015089536438" />
-
-    <link rel="stylesheet" href="../styles/base.css">
-    <link rel="stylesheet" href="../styles/utils.css">
-    <link rel="stylesheet" href="../styles/index.css">
-    <link rel="stylesheet" href="../styles/aboutme.css">
+    <link rel="shortcut icon" type="image/png" href="../assets/png/favicon.png">
+    
+    <link rel="stylesheet" href="../styles/base.min.css">
+    <link rel="stylesheet" href="../styles/utils.min.css">
+    <link rel="stylesheet" href="../styles/index.min.css">
+    <link rel="stylesheet" href="../styles/aboutme.min.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -70,6 +72,7 @@
         </div>
 
     </main>
+    
 </body>
 
 </html>
