--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -36,9 +36,7 @@
         <div class="main-about-me">
             <div class="main-about-me__description ">
                 <p >
-                    Hi I'm Alexdander Briones and yes! I would also spend a whole day listening to music  or netflix
-                    marathon 🎬🎶, but if there is something I would do all day it would be to design and develop what I
-                    design 🛠.
+                    Hi, I'm Alexdander Briones 🤓 and if there's one thing I would do all day it would be to design and develop what I design 🛠.
                 </p>
                 <p>
                     Currently I am a student of systems engineering 🚀, in the tech world I am oriented by the frontend
