--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
                 <p>
                     You can find me in all my social networks as <span class="call-to-action-text">@alexbvart</span> 👇
                     <ul class="generic-list-horizontal">
-                        <li><a target="blank" href="https://twitter.com/alexbvart"> <img src="/assets/svg/twitter.svg" alt="icon-twiter"></a></li>
-                        <li><a target="blank" href="https://github.com/alexbvart"> <img src="/assets/svg/github.svg" alt="icon-github"></a></li>
-                        <li><a target="blank" href="https://facebook.com/alexbvart"><img src="/assets/svg/facebook.svg" alt="icon-facebook"></a></li>
-                        <li><a target="blank" href="https://instagram.com/alexbvart/"><img src="/assets/svg/instagram.svg" alt="icon-instagram"></a></li>
+                        <li><a target="blank" href="https://twitter.com/alexbvart"> <img src="./assets/svg/twitter.svg" alt="icon-twiter"></a></li>
+                        <li><a target="blank" href="https://github.com/alexbvart"> <img src="./assets/svg/github.svg" alt="icon-github"></a></li>
+                        <li><a target="blank" href="https://facebook.com/alexbvart"><img src="./assets/svg/facebook.svg" alt="icon-facebook"></a></li>
+                        <li><a target="blank" href="https://instagram.com/alexbvart/"><img src="./assets/svg/instagram.svg" alt="icon-instagram"></a></li>
                     </ul>
                     <br>
                     And you can contact me here 👇 
                     <ul class="generic-list-horizontal">
-                        <li><a target="blank" href="https://api.whatsapp.com/send?phone=51972001932&text=Hola%20Alex%20😁,%20¿Cómo%20estás?"> <img src="/assets/svg/whatsapp.svg" alt="icon-whatsapp"></a></li>
-                        <li><a target="blank" href="https://www.messenger.com/t/100015089536438/?messaging_source=source%3Apages%3Amessage_shortlink"> <img src="/assets/svg/messenger.svg" alt="icon-messenger"></a></li> 
+                        <li><a target="blank" href="https://api.whatsapp.com/send?phone=51972001932&text=Hola%20Alex%20😁,%20¿Cómo%20estás?"> <img src="./assets/svg/whatsapp.svg" alt="icon-whatsapp"></a></li>
+                        <li><a target="blank" href="https://www.messenger.com/t/100015089536438/?messaging_source=source%3Apages%3Amessage_shortlink"> <img src="./assets/svg/messenger.svg" alt="icon-messenger"></a></li> 
                     </ul>
                     <br>
                     <span class="call-to-action-text"> 
@@ -113,14 +113,14 @@
                     <a href="" title="Sayni Sore">
                         <div class="work__container">
                             <h2>clothing <br> e-commerce</h2>
-                            <img src="/assets/png/sayni prenda.png" alt="sayni store clothing e-commerce">
+                            <img src="./assets/png/sayni prenda.png" alt="sayni store clothing e-commerce">
                         </div>
                     </a>
                 </li>
                 <li class="work__item">
                     <a href="" title="Book">
                         <div class="work__container">
-                            <img src="/assets/png/c-book.png" alt="e-book store">
+                            <img src="./assets/png/c-book.png" alt="e-book store">
                             <h2>e-book <br> store</h2>
                         </div>
                     </a>
@@ -129,14 +129,14 @@
                     <a href="" title="You Music">
                         <div class="work__container">
                             <h2>free music player</h2>
-                            <img src="/assets/png/c-Home youmusic.png" alt="You Music free music player">
+                            <img src="./assets/png/c-Home youmusic.png" alt="You Music free music player">
                         </div>
                     </a>
                 </li>
                 <li class="work__item">
                     <a href="" title="UNT academic management system">
                         <div class="work__container">
-                            <img src="/assets/png/Log in unt.png" alt="UNT academic management system">
+                            <img src="./assets/png/Log in unt.png" alt="UNT academic management system">
                             <h2>academic management</h2>
                         </div>
                     </a>
@@ -144,7 +144,7 @@
                 <li class="work__item">
                     <a href="" title="serial port chat">
                         <div class="work__container">
-                            <img src="/assets/png/Puerto Conectado winchat.png" alt="serial port chat">
+                            <img src="./assets/png/Puerto Conectado winchat.png" alt="serial port chat">
                             <h2>serial port chat</h2>
                         </div>
                     </a>
@@ -163,14 +163,14 @@
                     <a href="" title="Sayni Sore">
                         <div class="work__container">
                             <h2>clothing <br> e-commerce</h2>
-                            <img src="/assets/png/sayni prenda.png" alt="sayni store clothing e-commerce">
+                            <img src="./assets/png/sayni prenda.png" alt="sayni store clothing e-commerce">
                         </div>
                     </a>
                 </li>
                 <li class="work__item">
                     <a href="" title="Book">
                         <div class="work__container">
-                            <img src="/assets/png/c-book.png" alt="e-book store">
+                            <img src="./assets/png/c-book.png" alt="e-book store">
                             <h2>e-book <br> store</h2>
                         </div>
                     </a>
@@ -179,14 +179,14 @@
                     <a href="" title="You Music">
                         <div class="work__container">
                             <h2>free music player</h2>
-                            <img src="/assets/png/c-Home youmusic.png" alt="You Music free music player">
+                            <img src="./assets/png/c-Home youmusic.png" alt="You Music free music player">
                         </div>
                     </a>
                 </li>
                 <li class="work__item">
                     <a href="" title="UNT academic management system">
                         <div class="work__container">
-                            <img src="/assets/png/Log in unt.png" alt="UNT academic management system">
+                            <img src="./assets/png/Log in unt.png" alt="UNT academic management system">
                             <h2>academic management</h2>
                         </div>
                     </a>
@@ -194,7 +194,7 @@
                 <li class="work__item">
                     <a href="" title="serial port chat">
                         <div class="work__container">
-                            <img src="/assets/png/Puerto Conectado winchat.png" alt="serial port chat">
+                            <img src="./assets/png/Puerto Conectado winchat.png" alt="serial port chat">
                             <h2>serial port chat</h2>
                         </div>
                     </a>
