login google and facebook

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
             <li class="poppup__item--saludo">
                 <P>¡Hi 😃! </P>
-                <h3>Soy Alexander Briones</h3>
+                <h3>I'm Alexander Briones</h3>
                 <P>and this is my portfolio.</P>
                 <br>
                 <P>Were you can navigate through the sections:</P>
