menu responsive animation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./styles/base.css">
     <link rel="stylesheet" href="./styles/utils.css">
     <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/work.css">
     <link rel="stylesheet" href="./styles/aboutme.css">
     <link rel="stylesheet" href="./styles/icon-menu.css">
@@ -27,7 +28,6 @@
             <ul class="header__list">
                 <li><a href="#section_about">About me</a></li>
                 <li><a href="#section_work">Work</a></li>
-                <!-- <img src="assets/svg/menu.svg" alt=""> -->
                 <button class="menu" id="btn-open-popup">
                     <svg viewBox="0 0 64 48">
                         <path d="M19,15 L45,15 C70,15 58,-2 49.0177126,7 L19,37"></path>
