slide responsive works

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./styles/aboutme.css">
     <link rel="stylesheet" href="./styles/icon-menu.css">
     <link rel="stylesheet" href="./styles/popup.css">
-
+	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 </head>
 <body>
     <header class="header">
@@ -58,7 +58,7 @@
 
 
 
-    <main class="main main--margin24"
+    <section class="main main--margin24"
          
     >
         <h1 class="title-page title-page--right">About me</h1>
@@ -96,28 +96,28 @@
             </div>
         </div>
 
-    </main>
+    </section>
 
 
 
 
 
-    <main class="main main__work main--margin24"
+    <section class="main main__work main--margin24"
         id="section_work"
     >
         <h1 class="title-page title-page--right">Works</h1>
-        <!-- div>ul>li*6>.work__container>h2+img -->
-        <div class="work">
-            <ul class="work__content">
-                <li class="work__item">
-                    <a href="" title="Sayni Sore">
+        <p>These are some of my personal projects</p>
+        <div class="swiper-container work">
+            <ul class="swiper-wrapper work__content" id="work__content">
+                <li class="swiper-slide work__item">
+                    <a href="#" title="Sayni Sore">
                         <div class="work__container">
                             <h2>clothing <br> e-commerce</h2>
                             <img src="./assets/png/sayni prenda.png" alt="sayni store clothing e-commerce">
                         </div>
                     </a>
                 </li>
-                <li class="work__item">
+                <li class="swiper-slide work__item">
                     <a href="" title="Book">
                         <div class="work__container">
                             <img src="./assets/png/c-book.png" alt="e-book store">
@@ -125,7 +125,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="work__item">
+                <li class="swiper-slide work__item">
                     <a href="" title="You Music">
                         <div class="work__container">
                             <h2>free music player</h2>
@@ -133,7 +133,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="work__item">
+                <li class="swiper-slide work__item">
                     <a href="" title="UNT academic management system">
                         <div class="work__container">
                             <img src="./assets/png/Log in unt.png" alt="UNT academic management system">
@@ -141,57 +141,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="work__item">
-                    <a href="" title="serial port chat">
-                        <div class="work__container">
-                            <img src="./assets/png/Puerto Conectado winchat.png" alt="serial port chat">
-                            <h2>serial port chat</h2>
-                        </div>
-                    </a>
-                </li>
-<!--                 <li class="work__item">
-                    <a href="" title="Valley vegetables e-commerce">
-                        <div class="work__container">
-                            <h2>vegetables <br> e-commerce</h2>
-                            <img src="../assets/png/Product valley.png" alt="Valley vegetables e-commerce">
-                        </div>
-                    </a>
-                </li> -->
-
-                <!-- Doblar la informacion -->
-                <li class="work__item">
-                    <a href="" title="Sayni Sore">
-                        <div class="work__container">
-                            <h2>clothing <br> e-commerce</h2>
-                            <img src="./assets/png/sayni prenda.png" alt="sayni store clothing e-commerce">
-                        </div>
-                    </a>
-                </li>
-                <li class="work__item">
-                    <a href="" title="Book">
-                        <div class="work__container">
-                            <img src="./assets/png/c-book.png" alt="e-book store">
-                            <h2>e-book <br> store</h2>
-                        </div>
-                    </a>
-                </li>
-                <li class="work__item">
-                    <a href="" title="You Music">
-                        <div class="work__container">
-                            <h2>free music player</h2>
-                            <img src="./assets/png/c-Home youmusic.png" alt="You Music free music player">
-                        </div>
-                    </a>
-                </li>
-                <li class="work__item">
-                    <a href="" title="UNT academic management system">
-                        <div class="work__container">
-                            <img src="./assets/png/Log in unt.png" alt="UNT academic management system">
-                            <h2>academic management</h2>
-                        </div>
-                    </a>
-                </li>
-                <li class="work__item">
+                <li class="swiper-slide work__item">
                     <a href="" title="serial port chat">
                         <div class="work__container">
                             <img src="./assets/png/Puerto Conectado winchat.png" alt="serial port chat">
@@ -209,8 +159,11 @@
                 </li> -->
 
             </ul>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-next swiper-button-white"></div>
+            <div class="swiper-button-prev swiper-button-white"></div>
         </div>
-    </main>
+    </section>
 <!--     <div class="img-background"></div>  -->
     
 
@@ -239,5 +192,8 @@
 
 
     <script src="js/popup.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="js/slide.js"></script>
+ 
 </body>
 </html>
