slide responsive works 2

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         id="section_work"
     >
         <h1 class="title-page title-page--right">Works</h1>
-        <p>These are some of my personal projects</p>
+        <p>These are some of my personal projects 🚀</p>
         <div class="swiper-container work">
             <ul class="swiper-wrapper work__content" id="work__content">
                 <li class="swiper-slide work__item">
