--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="./styles/base.css">
     <link rel="stylesheet" href="./styles/utils.css">
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/work.css">
     <link rel="stylesheet" href="./styles/aboutme.css">
@@ -50,8 +50,6 @@
                 <li><a target="blank" href="https://twitter.com/alexbvart"> <img src="./assets/svg/twitter.svg" alt="icon-twiter"></a></li>
                 <li><a target="blank" href="https://github.com/alexbvart"> <img src="./assets/svg/github.svg" alt="icon-github"></a></li>
                 <li><a id="section_about" target="blank" href="https://www.messenger.com/t/100015089536438/?messaging_source=source%3Apages%3Amessage_shortlink"> <img src="./assets/svg/messenger.svg" alt="icon-messenger"></a></li> 
-                <!-- id de la seccion inferior -->
-                <!-- m.me/alexbvart -->
             </ul>
         </div>
     </main>
@@ -149,28 +147,16 @@
                         </div>
                     </a>
                 </li>
-<!--                 <li class="work__item">
-                    <a href="" title="Valley vegetables e-commerce">
-                        <div class="work__container">
-                            <h2>vegetables <br> e-commerce</h2>
-                            <img src="../assets/png/Product valley.png" alt="Valley vegetables e-commerce">
-                        </div>
-                    </a>
-                </li> -->
-
             </ul>
             <div class="swiper-pagination"></div>
             <div class="swiper-button-next swiper-button-white"></div>
             <div class="swiper-button-prev swiper-button-white"></div>
         </div>
     </section>
-<!--     <div class="img-background"></div>  -->
-    
 
     <!-- menu popup -->
     <div class="overley center" id="overley">
         <ul class="poppup center" id="popup">
-
             <li class="poppup__item--saludo">
                 <P>¡Hi 😃! </P>
                 <h3>I'm Alexander Briones</h3>
