arranging some details

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 
 
 
-    <section class="main main__work main--margin24"
+    <section 
+        class="main main__work main--margin24"
         id="section_work"
     >
         <h1 class="title-page title-page--right">Works</h1>
